# elicit-rs

./: .travis.yml  Cargo.toml  README.md  deny.toml  elf_delegate!  rustfmt.toml
.github/workflows/: ci-rust.yml  rust.yml
elicit_macro/: Cargo.toml  README.md
elicit_macro/src/: aelicit_define.rs  aelicit_derive.rs  default_std.rs  elicit_define.rs  elicit_derive.rs  feature_default.rs  feature_parking_lot.rs  find_field_attr.rs  lib.rs  melicit_define.rs  melicit_derive.rs
elicit_macro/src/default_std/: aelicit_derive.rs  melicit_define.rs
elicit_macro/src/feature_default/: aelicit_define.rs  melicit_define.rs
elicit_macro/src/feature_parking_lot/: aelicit_define.rs  aelicit_derive.rs  melicit_define.rs  melicit_derive.rs
examples/: aelicit.rs  elicit.rs  melicit.rs  minimal.rs
examples/elicit_proc_macro/: Cargo.toml  rustfmt.toml
examples/elicit_proc_macro/src/: do_aelicit.rs  error.rs  main.rs
examples/inner/: error_default.rs  error_parking_lot.rs  mod.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: do_aelicit.rs  do_elicit.rs  do_melicit.rs  error_parking_lot.rs  error_std.rs  main.rs
examples/proc_macro/src/: do_aelicit.rs  do_elicit.rs  do_melicit.rs  error.rs  main.rs
src/: aelicit.rs  elicit.rs  elicit.rs.backup  error.rs  error.rs.backup  lib.rs
tests/test_proc/: Cargo.toml
tests/test_proc/src/: do_aelicit.rs  do_elicit.rs  do_melicit.rs  main.rs
