# -*- mode:toml; coding:utf-8-unix; -*-
# =============================================================================
[package]
name                    = "elicit"
version                 = "0.11.1-alpha.0"
publish                 = false
edition                 = "2021"
description             = "SmartPointer-like structure for polymorphism."
keywords                = ["utility"]
readme                  = "README.md"
include                 = [ "Cargo.toml",
                            "src/**/*.rs",
                            "README.md",
                            "LICENSE-APACHE-2.0",
                            "LICENSE-MIT"
                            ]

authors.workspace       = true
license.workspace       = true
documentation.workspace = true
homepage.workspace      = true
repository.workspace    = true
# =============================================================================
[workspace.package]
authors                 = ["hanepjiv <hanepjiv@gmail.com>"]
license                 = "MIT OR Apache-2.0"
documentation           = "https://docs.rs/elicit/"
homepage                = "https://github.com/hanepjiv/elicit-rs"
repository              = "https://github.com/hanepjiv/elicit-rs.git"
# -----------------------------------------------------------------------------
[workspace]
exclude                 = [ "target/",
                            "examples/",
                            ]
members                 = [ "elicit_macro",
                            ]
# =============================================================================
[features]
default                 = []
parking_lot             = [ "elicit_macro/parking_lot", "dep:parking_lot" ]
# =============================================================================
[dependencies]

# -----------------------------------------------------------------------------
[dependencies.elicit_macro]
default-features        = false
version                 = "^0.2"
path                    = "./elicit_macro"
# -----------------------------------------------------------------------------
[dependencies.parking_lot]
optional                = true

default-features        = false
version                 = "^0.12"
