# -*- mode:toml; coding:utf-8-unix; -*-
# =============================================================================
[package]
name                    = "elicit"
version                 = "0.12.3-alpha.3"
publish                 = false

description             = "SmartPointer-like structure for polymorphism."
keywords                = ["utility"]
categories              = ["rust-patterns"]
readme                  = "README.md"

include                 = [ "Cargo.toml",
                            "src/**/*.rs",
                            "README.md",
                            "LICENSE-APACHE-2.0",
                            "LICENSE-MIT"
                            ]

edition.workspace       = true
rust-version.workspace  = true
authors.workspace       = true
license.workspace       = true
documentation.workspace = true
homepage.workspace      = true
repository.workspace    = true
# =============================================================================
[workspace.package]
rust-version            = "1.85.0"
edition                 = "2024"
authors                 = ["hanepjiv <hanepjiv@gmail.com>"]
license                 = "MIT OR Apache-2.0"
documentation           = "https://docs.rs/elicit/"
homepage                = "https://github.com/hanepjiv/elicit-rs"
repository              = "https://github.com/hanepjiv/elicit-rs.git"
# -----------------------------------------------------------------------------
[workspace]
exclude                 = [ "target/",
                            "examples/",
                            ]
members                 = [ "elicit_macro",
                            ]
# =============================================================================
[features]
default                 = []
parking_lot             = [ "elicit_macro/parking_lot", "dep:parking_lot" ]
# =============================================================================
[dependencies]

# -----------------------------------------------------------------------------
[dependencies.elicit_macro]
default-features        = false
version                 = "0.2.5"
path                    = "./elicit_macro"
# -----------------------------------------------------------------------------
[dependencies.parking_lot]
optional                = true

default-features        = false
version                 = "0.12.3"
