# -*- mode:toml; coding:utf-8-unix; -*-
# =============================================================================
[package]
name                    = "elicit"
version                 = "0.12.4-alpha.7"
publish                 = true

description             = "SmartPointer-like structure for polymorphism."
keywords                = ["utility"]
categories              = ["rust-patterns"]
readme                  = "README.md"

include                 = [ "Cargo.toml",
                            "src/**/*.rs",
                            "README.md",
                            "LICENSE-APACHE-2.0",
                            "LICENSE-MIT"
                            ]

edition.workspace       = true
rust-version.workspace  = true
authors.workspace       = true
license.workspace       = true
documentation.workspace = true
homepage.workspace      = true
repository.workspace    = true
# =============================================================================
[workspace.package]
edition                 = "2024"
rust-version            = "1.85.1"
authors                 = ["hanepjiv <hanepjiv@gmail.com>"]
license                 = "MIT OR Apache-2.0"
documentation           = "https://docs.rs/elicit/"
homepage                = "https://github.com/hanepjiv/elicit-rs"
repository              = "https://github.com/hanepjiv/elicit-rs.git"
# -----------------------------------------------------------------------------
[workspace.dependencies]
proc-macro2             = { default-features = false, version = "1.0.103" }
quote                   = { default-features = false, version = "1.0.42" }
syn                     = { default-features = false, version = "2.0.110" }
# -----------------------------------------------------------------------------
[workspace]
exclude                 = [ "target/",
                            "examples/",
                            ]
members                 = [ "elicit_macro",
                            ]
# =============================================================================
[features]
default                 = []
parking_lot             = [ "elicit_macro/parking_lot", "dep:parking_lot" ]
# =============================================================================
[dependencies]

# -----------------------------------------------------------------------------
[dependencies.elicit_macro]
default-features        = false
version                 = "0.2.7"
path                    = "./elicit_macro"
# -----------------------------------------------------------------------------
[dependencies.parking_lot]
optional                = true

default-features        = false
version                 = "0.12.5"
# =============================================================================
[lints]
workspace               = true
# -----------------------------------------------------------------------------
[workspace.lints.rust]
