# -*- mode:toml; coding:utf-8-unix; -*-
# =============================================================================
[package]
name                    = "elicit_macro"
version                 = "0.2.5"

keywords                = ["utility"]
description             = "SmartPointer-like structure for polymorphism."
readme                  = "README.md"
include                 = [ "Cargo.toml",
                            "src/**/*.rs",
                            "README.md",
                            "LICENSE-APACHE-2.0",
                            "LICENSE-MIT"
                            ]

edition.workspace       = true
rust-version.workspace  = true
authors.workspace       = true
license.workspace       = true
documentation.workspace = true
homepage.workspace      = true
repository.workspace    = true

publish                 = true
# =============================================================================
[lib]
proc-macro              = true
# =============================================================================
[features]
default                 = []
parking_lot             = []
# =============================================================================
[dependencies]

# -----------------------------------------------------------------------------
[dependencies.proc-macro2]
default-features        = false
version                 = "1.0.89"
features                = [ "proc-macro",
                            #"nightly",
                            #"span-locations"
                            ]
# -----------------------------------------------------------------------------
[dependencies.quote]
default-features        = false
version                 = "1.0.37"
features                = [ "proc-macro",
                            ]
# -----------------------------------------------------------------------------
[dependencies.syn]
default-features        = false
version                 = "2.0.87"
features                = [ #"clone-impls",
                            "derive",
                            "parsing",
                            "printing",
                            "proc-macro",
                            "extra-traits",
                            #"fold",
                            "full",
                            #"test",
                            #"visit",
                            #"visit-mut",
                            ]
