# -*- mode:toml; coding:utf-8-unix; -*-
# =============================================================================
[package]
name                    = "elicit_macro"
version                 = "0.2.7"
publish                 = false

description             = "SmartPointer-like structure for polymorphism."
keywords                = ["utility"]
categories              = ["rust-patterns"]
readme                  = "README.md"

include                 = [ "Cargo.toml",
                            "src/**/*.rs",
                            "README.md",
                            "LICENSE-APACHE-2.0",
                            "LICENSE-MIT"
                            ]

edition.workspace       = true
rust-version.workspace  = true
authors.workspace       = true
license.workspace       = true
documentation.workspace = true
homepage.workspace      = true
repository.workspace    = true
# =============================================================================
[lib]
proc-macro              = true
# =============================================================================
[features]
default                 = []
parking_lot             = []
# =============================================================================
[dependencies.proc-macro2]
workspace               = true
features                = [ "proc-macro",
                            # "nightly",
                            # "span-locations"
                            ]
# -----------------------------------------------------------------------------
[dependencies.quote]
workspace               = true
features                = [ "proc-macro" ]
# -----------------------------------------------------------------------------
[dependencies.syn]
workspace               = true
features                = [ #"clone-impls",
                            "derive",
                            "parsing",
                            "printing",
                            "proc-macro",
                            "extra-traits",
                            #"fold",
                            "full",
                            #"test",
                            #"visit",
                            #"visit-mut",
                            ]
# =============================================================================
[lints]
workspace               = true