[package]
name                    = "minimal"
version                 = "0.2.0"
edition                 = "2021"
# =============================================================================
[features]
default                 = [ #"parking_lot",
                            ]
parking_lot             = [ "elicit/parking_lot"
                            ]
# =============================================================================
[dependencies.elicit]
default-features        = false
path                    = "../../"
